# ordo-filesystem

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  renovate.json
.github/workflows/: build.yml  docs.yml  publish-docker.yml  publish-pypi.yml  tests.yml
docs/: index.md
docs/api/: core.md  fs.md  ops.md  ordo.md  undo.md
src/ordo/: __init__.py
src/ordo/core/: __init__.py
src/ordo/fs/: __init__.py
src/ordo/ops/: __init__.py  operation.py
src/ordo/undo/: __init__.py
tests/: test_operation.py
